--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
     integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Document</title>
+  <!-- icom site -->
+  <link rel="icon" href="/assets/images/Group.svg" type="image/x-icon">
+
+  <title>Note|App</title>
 </head>
 
 <body>
+  <!-- notes sidebar -->
   <div class="notes" id="app">
     <div class="notes__sidebar">
       <div class="notes__logo">NOTE APP</div>
@@ -25,11 +29,15 @@
       </div>
       <button class="notes__add">ADD NOTE</button>
     </div>
+    <!-- note input -->
     <div class="notes__preview">
       <input type="text" class="notes__title" placeholder="Note title ...">
       <textarea class="notes__bosy">Take some note...</textarea>
     </div>
   </div>
+
+  <!-- js -->
+  <script src="js/app.js"></script>
 </body>
 
 </html>
