--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <div class="notes__small-updated">Monday 1:30 PM</div>
         </div>
       </div>
-      <button class="notes__add">ADD NOTE</button>
+      <button class="notes__add coolBeans">ADD NOTE</button>
     </div>
     <!-- note input -->
     <div class="notes__preview">
-      <input type="text" class="notes__title" placeholder="Note title ...">
+      <input type="text" class="notes__title " placeholder="Note title ...">
       <textarea class="notes__bosy">Take some note...</textarea>
     </div>
   </div>
