--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- icom site -->
-  <link rel="icon" href="/assets/images/Group.svg" type="image/x-icon">
+  <link rel="icon" href="" type="image/x-icon">
 
   <title>Note|App</title>
 </head>
@@ -18,7 +18,7 @@
 <body>
   <!-- notes sidebar -->
   <div class="notes" id="app">
-    <div class="notes__sidebar">
+    <!-- <div class="notes__sidebar">
       <div class="notes__logo">NOTE APP</div>
       <div class="notes__list">
         <div class="notes__list-item notes__list-item--selected">
@@ -29,15 +29,14 @@
       </div>
       <button class="notes__add coolBeans">ADD NOTE</button>
     </div>
-    <!-- note input -->
     <div class="notes__preview">
       <input type="text" class="notes__title " placeholder="Note title ...">
       <textarea class="notes__bosy">Take some note...</textarea>
-    </div>
+    </div> -->
   </div>
 
   <!-- js -->
-  <script src="js/app.js"></script>
+  <script src="js/app.js" type="module"></script>
 </body>
 
 </html>
