--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <!-- js -->
-  <script src="js/app.js" type="module"></script>
+  <script src="./js/main.js" type="module"></script>
 </body>
 
 </html>
